--- a/index.html
+++ b/index.html
@@ -1,8 +1,347 @@
-<html>
-    <head>
-    gerenzhuye
-    </head>
-    <body>
-    zhongjain neirong
-    </body>
+<!DOCTYPE html>
+<!-- 参考flato -->
+
+<!--[if lt IE 7 ]> <html class="ie ie6 no-js" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie ie7 no-js" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie ie8 no-js" lang="en"> <![endif]-->
+<!--[if IE 9 ]>    <html class="ie ie9 no-js" lang="en"> <![endif]-->
+<!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
+<head>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<title>王英伟 - Engwil Wang</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--main style-->
+<link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css">
+<link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
+<!--background slider style-->
+<link rel="stylesheet" type="text/css" href="css/slideshow.css" />
+<!--google font style-->
+<link href='http://fonts.useso.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
+<!--font-family: 'Open Sans', sans-serif;-->
+<!-- font css style-->
+<link href="http://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+<!--for slider style-->
+
+<noscript>
+<link rel="stylesheet" type="text/css" href="css/fallback.css" />
+</noscript>
+<!--[if lt IE 9]>
+			<link rel="stylesheet" type="text/css" href="css/fallback.css" />
+		<![endif]-->
+</head>
+<body>
+<!--wrapper start-->
+<div class="wrapper" id="wrapper">
+  <header>
+    <!--banner start-->
+    <div class="banner row" id="banner">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadd" style="height:100%">
+        <!--background slide show start-->
+        <ul class="cb-slideshow">
+          <li><span>Image 01</span></li>
+          <li><span>Image 02</span></li>
+          <li><span>Image 03</span></li>
+        </ul>
+        <!--background slide show end-->
+      </div>
+    </div>
+    <!--banner end-->
+
+    <div class="bannerText container">
+      <h1>欢迎走进我的世界</h1>
+      <h2>我是王英伟</h2>
+    </div>
+    <!--menu start-->
+    <div class="menu">
+      <div class="navbar-wrapper">
+        <div class="container">
+          <div class="navwrapper">
+            <div class="navbar navbar-inverse navbar-static-top">
+              <div class="container">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                  <a class="navbar-brand" href="#">Menu</a> </div>
+                <div class="navbar-collapse collapse">
+                  <ul class="nav navbar-nav">
+                    <li class="menuItem active"><a href="#wrapper">Engwil</a></li>
+                    <li class="menuItem"><a href="#aboutme">我是谁</a></li>
+                    <li class="menuItem"><a href="#technical">知识技能</a></li>
+                    <li class="menuItem"><a href="#exprience">职场经历</a></li>
+                    <li class="menuItem"><a href="#education">学生时代</a></li>
+                    <li class="menuItem"><a href="#contact">联系方式</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End Navbar -->
+        </div>
+      </div>
+    </div>
+    <!--menu end-->
+  </header>
+  <!--about me start-->
+  <section class="aboutme" id="aboutme">
+    <div class="container">
+      <div class="heading">
+        <h2>关于我</h2>
+        <p>简短的自白</p>
+      </div>
+      <div class="row">
+        <div class=" col-xs-12 col-sm-12 col-md-7 col-lg-7">
+          <h3>王英伟</h3>
+          <h4 class="subHeading">产品经理 & 个人开发者</h4>
+          <p>我，姓王，名英伟，字烁籴。英文名Engwil，亦或Sid。90后水瓶男。</p>
+          <p>工作上我是产品经理，私下里我会练习编程，比如安卓开发。我欣赏极客风格，喜欢探索新的领域，寻找下一个未来。比如VR/AR/MR/物联网，这是我最近关注的事物。 </p>
+          <p>至于爱好嘛，我喜欢健身、旅游。而相对这些，我更喜欢探索那些灵异又神秘的存在！嗯哼，我想你懂了！这应该是我最大的爱好。如果你和我兴趣相同，欢迎一起扯淡！ </p>
+          <a href="http://sid.deercv.com" class="bntDownload">下载我的简历</a> </div>
+        <div class=" col-xs-12 col-sm-12 col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1 proPic"> <img src="http://placehold.it/295x295&text=image1" alt="听人说我还挺带劲" class="img-circle topmar"> </div>
+      </div>
+    </div>
+  </section>
+  <!--about me end-->
+
+  <!--technical start-->
+  <section class="technical" id="technical">
+    <div class="container">
+      <div class="heading">
+        <h2>知识技能</h2>
+        <p>以下是我目前常用到的技能</p>
+      </div>
+      <div class="row">
+        <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+          <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="80"> <span class="percent"></span> </span>
+            <h4>axure</h4>
+            <p>原型工具最常用它，当然还有justinmind/UIDesigner/墨刀</p>
+          </div>
+        </div>
+        <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+          <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="80"> <span class="percent"></span> </span>
+            <h4>xmind</h4>
+            <p>它比较省时省力，脑图工具除了百度脑图就是它了</p>
+          </div>
+        </div>
+        <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+          <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="70"> <span class="percent"></span> </span>
+            <h4>visio</h4>
+            <p>流程图、UML图，拓扑图等等全部搞定</p>
+          </div>
+        </div>
+        <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+          <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="50"> <span class="percent"></span> </span>
+            <h4>HTML5 / CSS3</h4>
+            <p>曾经经常用，现在偶尔才用下</p>
+          </div>
+        </div>
+        <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+          <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="60"> <span class="percent"></span> </span>
+            <h4>java</h4>
+            <p>Java是世界上最好用的语言！</p>
+          </div>
+        </div>
+        <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
+          <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="80"> <span class="percent"></span> </span>
+            <h4>office</h4>
+            <p>Word/Excel/ppt/onenote/outlook</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--technical end-->
+
+  <!--exprience start-->
+  <section class="exprience" id="exprience">
+    <div class="container">
+      <div class="heading">
+        <h2>我的职场</h2>
+        <p>感谢所有曾经共事的领导与伙伴们</p>
+      </div>
+      <div class="row workDetails">
+        <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+          <div class="workYear">Feb, 2016<br>Aug, 2015</div>
+        </div>
+        <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+          <div class="arrowpart"></div>
+          <div class="exCon">
+            <h4>时代云海</h4>
+            <h5>产品经理助理</h5>
+            <p>产品基本功的强化阶段。左手的PRD，右手的产品稿，改改改，画画画……当然工作维度不能单一，我要准备学Python了，数据分析和测试都要用到它，那可是个好东西。看来下一步就是成为全栈产品经理了。</p>
+          </div>
+        </div>
+      </div>
+      <div class="row workDetails">
+        <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+          <div class="workYear">Jun, 2015<br>Apr, 2015</div>
+        </div>
+        <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+          <div class="arrowpart"></div>
+          <div class="exCon">
+            <h4>傻瓜理财</h4>
+            <h5>产品经理（实习）</h5>
+            <p>产品的入门阶段。制作移动app的原型，撰写PRD，参与app的功能测试。野蛮的创造、探索。</p>
+          </div>
+        </div>
+      </div>
+      <div class="row workDetails">
+        <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+          <div class="workYear">Nov, 2013<br>Mar, 2013</div>
+        </div>
+        <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+          <div class="arrowpart"></div>
+          <div class="exCon">
+            <h4>腾讯</h4>
+            <h5>校园主管</h5>
+            <p>在校园里，推广腾讯微博，经常搞些微博上墙的活动，还有微信上墙。话说上墙可是我的最爱，因为每次都能拿到好多小礼品！！！（当然还有美女看~~）</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--exprience end-->
+
+  <!--education start-->
+  <section class="education" id="education">
+    <div class="container">
+      <div class="heading">
+        <h2>学生时代</h2>
+        <p>致那逝去的青春</p>
+      </div>
+      <div class="row workDetails">
+        <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+          <div class="workYear">July, 2015<br>Sep, 2011</div>
+        </div>
+        <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+          <div class="arrowpart"></div>
+          <div class="exCon">
+            <h4>计算机学士</h4>
+            <h5>南昌大学</h5>
+            <p>四年，做过几个兼职，参加过几个社团，搞过几场比赛，拿过些奖状，考过些证书。嗯，就差个正经的恋爱了。</p>
+          </div>
+        </div>
+      </div>
+      <div class="row workDetails">
+        <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+          <div class="workYear">July, 2011<br>before</div>
+        </div>
+        <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+          <div class="arrowpart"></div>
+          <div class="exCon">
+            <h4>K12</h4>
+            <h5>沈阳</h5>
+            <p>结束了12年的学习生活。青春的诗钢的琴，光阴的故事随流水……<br>之后离开了北方的寒夜，走进南方的艳阳里……</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--education end-->
+
+
+  <!--protfolio start-->
+  <section class="protfolio" id="protfolio">
+  </section>
+  <!--protfolio end-->
+
+  <!--contact start-->
+  <section class="contact" id="contact">
+  </section>
+  <section class="contactDetails" >
+    <div class="container topCon">
+      <div class="heading">
+        <h2>联系方式</h2>
+        <p>好朋友要记得常联系哦</p>
+      </div>
+    </div>
+    <div class="container" >
+      <!--contact info start-->
+      <div >
+        <p class="col-xs-12 col-sm-3 col-md-4 col-lg-4"> <i class="fa fa-map-marker fa-1g"></i> 中国 北京 朝阳区</p>
+        <p class="col-xs-12 col-sm-3 col-md-4 col-lg-4"> <i class="fa fa-envelope-o "></i> <a href="mailto:shuodi@hotmail.com">shuodi@hotmail.com</a></p>
+        <p class="col-xs-12 col-sm-3 col-md-4 col-lg-4"> <i class="fa fa-linkedin fa-1g"></i> <a href="http://cn.linkedin.com/in/engwil"> 王英伟</a></p>
+        <p class="col-xs-12 col-sm-3 col-md-4 col-lg-4"> <i class="fa fa-weibo fa-1g"></i> <a href="http://weibo.com/wshuodi"> @烁籴</a></p>
+        <p class="col-xs-12 col-sm-3 col-md-4 col-lg-4"> <i class="fa fa-weixin fa-lg"></i>公众号：Engwil_W</p>
+        <p class="col-xs-12 col-sm-3 col-md-4 col-lg-4"> <i class="fa fa-link "></i> <a href="www.engwil.win"> www.engwil.win</a></p>
+      </div>
+      <!--contact info end-->
+     
+    </div>
+    <p class="heading">&copy2016 Engwil.Wang</p>
+  </section>
+  <!--contact end-->
+
+  <!--footer start-->
+  <section class="footer" id="footer">
+  </section>
+  <!--footer end-->
+</div>
+<!--wrapper end-->
+
+<!--modernizr js-->
+<script type="text/javascript" src="js/modernizr.custom.26633.js"></script>
+<!--jquary min js-->
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/jquery.gridrotator.js"></script>
+<!--for custom jquary-->
+<script src="js/custom.js"></script>
+<!--for placeholder jquary-->
+<script type="text/javascript" src="js/jquery.placeholder.js"></script>
+<!--for menu jquary-->
+<script type="text/javascript" src="js/stickUp.js"></script>
+<script type="text/javascript">
+jQuery(function($) {
+$(document).ready( function() {
+  //enabling stickUp on the '.navbar-wrapper' class
+  $('.navbar-wrapper').stickUp({
+				parts: {
+				  0: 'banner',
+				  1: 'aboutme',
+				  2: 'technical',
+				  3: 'exprience',
+				  4: 'education',
+				  5: 'protfolio',
+				  6: 'contact'
+				},
+				itemClass: 'menuItem',
+				itemHover: 'active',
+				topMargin: 'auto'
+			  });
+});
+
+$( ".navbar.navbar-inverse.navbar-static-top a" ).click(function() {
+  $( ".navbar-collapse" ).addClass( "hideClass" );
+});
+
+
+$( ".navbar.navbar-inverse.navbar-static-top a" ).click(function() {
+  $( ".navbar-collapse" ).addClass( "collapse" );
+});
+
+
+$( ".navbar.navbar-inverse.navbar-static-top a" ).click(function() {
+  $( ".navbar-collapse" ).removeClass( "in" );
+});
+
+$( ".navbar-toggle" ).click(function() {
+  $( ".navbar-collapse" ).removeClass( "hideClass" );
+});
+
+
+});
+</script>
+<!--for portfoli filter jquary-->
+<script src="js/jquery.isotope.js" type="text/javascript"></script>
+<!--for portfoli lightbox -->
+<link type="text/css" rel="stylesheet" id="theme" href="css/jquery-ui-1.8.16.custom.css">
+<link type="text/css" rel="stylesheet" href="css/lightbox.min.css">
+<script type="text/javascript" src="js/jquery.ui.widget.min.js"></script>
+<script type="text/javascript" src="js/jquery.ui.rlightbox.js"></script>
+<!--for skill chat jquary-->
+<script src="js/jquery.easing.min.js"></script>
+<script src="js/jquery.easypiechart.js"></script>
+<!--contact form js-->
+<script type="text/javascript" src="js/jquery.contact.js"></script>
+</body>
 </html>
